multiple bug fixes
-On detail page, If the event name is multiline it overflows
-Hide attractions card if we show no attraction
- Add Area Image to Header if we have one
- Title and heart are not aligned on details page

--- a/src/features/recommendations/components/recommendation-details/recommendation-details.module.scss
+++ b/src/features/recommendations/components/recommendation-details/recommendation-details.module.scss
@@ -7,19 +7,22 @@
 }
 
 .heart {
-
-  margin-top: 5px;
+ 
+  margin-top: 7%;
   margin-right: 2px;
   width: 24px;
-  height: auto;
+  height: 24px;
   background-image: $heart-not-selected;
   background-repeat: no-repeat;
   display: inline-block;
 }
 
 .heartFilled {
+
+  margin-top: 6%;
+  
   width: 30px;
-  height: auto;
+  height: 30px;
   background-image: $heart-selected;
   background-repeat: no-repeat;
   display: inline-block;
@@ -153,8 +156,9 @@
   display: -webkit-box;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
-  height: 38px;
-  margin-bottom: -5px;
+  height: auto;
+  margin-bottom: 0px;
+  
 
 }
 
@@ -201,7 +205,7 @@
   text-align: left;
   font-size: 14px;
   line-height: 19px;
-  margin-top: -5px;
+  margin-top: 0px;
   width: 100%;
 
   word-wrap: break-word;
@@ -211,7 +215,7 @@
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
   margin-bottom: 30px;
-
+ 
 }
 
 .showDetails {
@@ -294,8 +298,9 @@
 
 
 .headerImage {
-  margin-top: 50px;
-  width: 90%;
+  margin-top: 10px;
+  width: 100%;
+  height: 550px;
   display: flex;
   flex-direction: column;
 
@@ -313,6 +318,7 @@
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
 
+
 }
 
 .oneRow {
@@ -321,4 +327,26 @@
   
   width: 100%;
   justify-content: space-between;
+  
+}
+
+.headerHolder{
+  z-index: 2;
+  margin-top: -120px;
+  background: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 50%);
+
+ 
+}
+
+.headerHolderCoverless{
+  z-index: 2;
+  margin-top: 0px;
+ 
+  width: 100%;
+ 
+}
+
+.title {
+  
+  @extend .textShadow;
 }
